bugfix: When printing tests then long lines where not correctly broken into shorter ones

--- a/include/css/administration.css
+++ b/include/css/administration.css
@@ -327,7 +327,7 @@ body {
 
     .jo_codeBlock {
         font-family: monospace;
-        white-space: pre;
+        white-space: pre-wrap;
     }
 
     .jo_fileCaption {
